Fix too small font size and low color contrast of input labels

--- a/student-preferred-name-portlet-webapp/src/main/webapp/css/spnp.css
+++ b/student-preferred-name-portlet-webapp/src/main/webapp/css/spnp.css
@@ -115,3 +115,8 @@
  .student-preferred-name .info-text {
    padding-left: 5px;
  }
+
+ .uportal-channel-table-caption {
+	color: #333;
+	font-size: 12px;
+ }
